--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,22 @@
 aniso8601==9.0.1
 click==8.1.3
+distlib==0.3.6
+filelock==3.8.0
 Flask==2.2.2
 Flask-RESTful==0.3.9
+Flask-SQLAlchemy==3.0.3
+greenlet==2.0.2
 importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+platformdirs==2.5.4
 pytz==2022.6
 six==1.16.0
+SQLAlchemy==2.0.4
+typing_extensions==4.5.0
+virtualenv==20.16.7
 Werkzeug==2.2.2
 zipp==3.10.0
+marshmallow==3.19.0
+packaging==23.0
