--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ click==8.1.3
 distlib==0.3.6
 filelock==3.8.0
 Flask==2.2.2
-Flask-RESTful==0.3.9
+Flask-MySQL==1.5.2
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
 importlib-metadata==5.0.0
@@ -18,5 +18,4 @@ typing_extensions==4.5.0
 virtualenv==20.16.7
 Werkzeug==2.2.2
 zipp==3.10.0
-marshmallow==3.19.0
-packaging==23.0
+pymysql==1.0.2
